--- a/rag-agent/requirements.txt
+++ b/rag-agent/requirements.txt
@@ -1,8 +1,34 @@
+# FastAPI and server
 fastapi==0.109.0
-uvicorn==0.27.0
+uvicorn[standard]==0.27.0
 pydantic==2.6.0
 pydantic-settings==2.1.0
+
+# HTTP client
 requests==2.31.0
+aiohttp==3.9.3
+httpx==0.26.0
+
+# Environment
 python-dotenv==1.0.1
+
+# Vector databases
 qdrant-client==1.7.3
+# pymilvus==2.3.6  # Uncomment when Milvus support is added
+
+# OpenAI
 openai==1.12.0
+
+# AWS (for S3 data source)
+boto3==1.34.50
+
+# Kubernetes client (optional, for status reporting)
+kubernetes==29.0.0
+
+# Testing
+pytest==8.0.0
+pytest-asyncio==0.23.4
+httpx==0.26.0
+
+# Logging and monitoring
+structlog==24.1.0
