feat: 添加自动检测文档变化的逻辑

--- a/rag-operator/config/samples/kustomization.yaml
+++ b/rag-operator/config/samples/kustomization.yaml
@@ -1,6 +1,7 @@
 ## Append samples of your project ##
 resources:
 - rag_v1alpha1_documentset.yaml
+- rag_v1alpha1_documentset_autosync.yaml  # Auto-sync examples
 - rag_v1alpha1_embeddingjob.yaml
 - rag_v1alpha1_indexjob.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
